squaring away delete image buttons

--- a/client/templates/tiles/image/tile_edit_image.html
+++ b/client/templates/tiles/image/tile_edit_image.html
@@ -7,7 +7,7 @@
           {{/if}}
           <div class="controls">
             <label>Image</label>
-              <div class="imageUploadThumb"><img class="img-responsive" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/></div>
+              <div class="imageUploadThumb"><img class="img-responsive" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/><a href="#" class="btn btn-danger btn-xs delete-image"><span class="fa fa-close"></span> Delete Image</a></div>
               <input type="file" name="image" id="image" class="form-control" accept="image/*" value="">
               <span class="help-block">{{errorMessage 'image'}}</span>
               <label>Image Title</label>
