--- a/client/templates/tiles/tile_edit.html
+++ b/client/templates/tiles/tile_edit.html
@@ -28,6 +28,10 @@
     {{> tileEditLink}}
   {{/if}}
 
+  {{#if tileTypeFigure}}
+    {{> tileEditFigure}}
+  {{/if}}
+
   <p style="position:fixed;top:0px;left:50px;"><a class="btn btn-success btn-xs" href="{{pathFor 'storyEdit' _id=this.storyId}}"><span class="fa fa-arrow-left"></span> Back to story</a></p>
 
 </template>
