Added inform support

--- a/client/templates/stories/story_edit.html
+++ b/client/templates/stories/story_edit.html
@@ -24,4 +24,11 @@
   </div>
   <script async src="https://platform.instagram.com/en_US/embeds.js"></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <script>
+    !function(e,t,n,s){var i="InfogramEmbeds",o=e.getElementsByTagName
+    (t),d=o[0],a=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(s)&&
+    (s=a+s),window[i]&&window[i].initialized)window[i].process&&window[i].process();
+    else if(!e.getElementById(n)){var r=e.createElement(t);r.async=1,r.id=n,r.src=s,d.parentNode
+    .insertBefore(r,d)}}(document,"script","infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");
+  </script>
 </template>
