--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -3,7 +3,7 @@
 
     {{#if tileTypeText}}
     <div class="tile-text">
-      <p>{{text}}</p>
+      <p>{{{text}}}</p>
       {{#if hasAttribution}}
         <p><small>{{attribution}}</small></p>
       {{/if}}
