--- a/client/templates/tiles/tile_item_edit.html
+++ b/client/templates/tiles/tile_item_edit.html
@@ -3,7 +3,7 @@
     <div class="tile-edit thumbnail">
 
     {{#if tileTypeText}}
-      <p>{{text}}</p>
+      <p>{{{text}}}</p>
     {{/if}}
 
     {{#if tileTypeImage}}
