--- a/client/templates/stories/story_submit.html
+++ b/client/templates/stories/story_submit.html
@@ -2,10 +2,12 @@
   <div class="page">
     <form>
       <div class="form-group {{errorClass 'title'}}">
-        <label class="control-label" for="title">Title</label>
         <div class="controls">
+            <label class="control-label" for="title">Title</label>
             <input name="title" id="title" type="text" value="" placeholder="Name your story" class="form-control"/>
             <span class="help-block">{{errorMessage 'title'}}</span>
+            <label class="control-label" for="byline">By Line</label>
+            <input name="byline" id="byline" type="text" value="" placeholder="Who is this story by?" class="form-control"/>
         </div>
       </div>
       <input type="submit" value="Submit" class="btn btn-primary"/>
