--- a/client/templates/tiles/point_of_interest/tile_edit_point_of_interest.html
+++ b/client/templates/tiles/point_of_interest/tile_edit_point_of_interest.html
@@ -24,6 +24,9 @@
             <label><i class="fa fa-at" aria-hidden="true"></i> Email</label>
             <input name="email" id="email" type="text" value="{{email}}" placeholder="Enter email address here" class="form-control"/>
 
+            <label><i class="fa fa-at" aria-hidden="true"></i> Website</label>
+            <input name="website" id="website" type="text" value="{{website}}" placeholder="Enter a website here" class="form-control"/>
+
             <label><i class="fa fa-clock-o" aria-hidden="true"></i> Hours</label>
             <input name="hours" id="hours" type="text" value="{{hours}}" placeholder="Enter hours of operation here" class="form-control"/>
 
