Finished building quote tiles

--- a/client/templates/tiles/quote/tile_submit_quote.html
+++ b/client/templates/tiles/quote/tile_submit_quote.html
@@ -1,7 +1,7 @@
 <template name="tileSubmitQuote">
   <hr>
   <form name="tile" class="tile-form form">
-    <div class="form-group {{errorClass 'title'}}">
+    <div class="form-group {{errorClass 'quote'}}">
       {{#if uploadingImage 'true'}}
         {{> uploading}}
       {{/if}}
