--- a/client/stylesheets/tiles.css
+++ b/client/stylesheets/tiles.css
@@ -24,3 +24,16 @@
   overflow-x: hidden;
   cursor: move;
 }
+
+.tile-caption {
+  position: absolute;
+  bottom: 50px;
+  left: 20px;
+  color: #eee;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  border-radius: 20px;
+  max-width: 300px;
+  font-size: 14px;
+  z-index: 2;
+}
