--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -65,16 +65,7 @@
     {{/if}}
 
     {{#if tileTypeEmbed}}
-      <div class="tile-embed">
-        {{{embed}}}
-        <div class="embed-overlay"></div>
-      </div>
-      {{#if hasText}}
-        <p>{{text}}</p>
-      {{/if}}
-      {{#if hasAttribution}}
-        <p><small>{{attribution}}</small></p>
-      {{/if}}
+      {{> tileItemEmbed}}
     {{/if}}
 
     {{#if tileTypePointOfInterest}}
